--- a/beszel/site/src/index.css
+++ b/beszel/site/src/index.css
@@ -89,3 +89,22 @@
 		--chart-5: 340 75% 55%;
 	} */
 }
+
+/* scrollbar */
+::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+	background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+	background-color: hsla(var(--border) / 0.8);
+	border-radius: 0.25rem;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+	background-color: hsl(var(--border));
+  }
+  
