--- a/beszel/site/src/index.css
+++ b/beszel/site/src/index.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @layer base {
 	:root {
 		--background: 30 8% 98.5%;
@@ -23,9 +24,16 @@
 		--input: 30 4.29% 72.55%;
 		--ring: 30 3.97% 49.41%;
 		--radius: 0.8rem;
+		/* charts */
+		--chart-1: 220 70% 50%;
+		--chart-2: 160 60% 45%;
+		--chart-3: 30 80% 55%;
+		--chart-4: 280 65% 60%;
+		--chart-5: 340 75% 55%;
 	}
 
 	.dark {
+		color-scheme: dark;
 		--background: 240 10% 6.2%;
 		--foreground: 0 0% 98.04%;
 		--card: 240 8.57% 8%;
@@ -65,46 +73,3 @@
 .recharts-yAxis {
 	font-variant-numeric: tabular-nums;
 }
-
-/* charts */
-@layer base {
-	:root {
-		/* --chart-1: 12 76% 61%;
-		--chart-2: 173 58% 39%;
-		--chart-3: 197 37% 24%;
-		--chart-4: 43 74% 66%;
-		--chart-5: 27 87% 67%; */
-		--chart-1: 220 70% 50%;
-		--chart-2: 160 60% 45%;
-		--chart-3: 30 80% 55%;
-		--chart-4: 280 65% 60%;
-		--chart-5: 340 75% 55%;
-	}
-	/* 
-	.dark {
-		--chart-1: 220 70% 50%;
-		--chart-2: 160 60% 45%;
-		--chart-3: 30 80% 55%;
-		--chart-4: 280 65% 60%;
-		--chart-5: 340 75% 55%;
-	} */
-}
-
-/* scrollbar */
-::-webkit-scrollbar {
-	width: 10px;
-  }
-  
-  ::-webkit-scrollbar-track {
-	background-color: transparent;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-	background-color: hsla(var(--border) / 0.8);
-	border-radius: 0.25rem;
-  }
-  
-  ::-webkit-scrollbar-thumb:hover {
-	background-color: hsl(var(--border));
-  }
-  
