--- a/beszel/site/src/index.css
+++ b/beszel/site/src/index.css
@@ -34,25 +34,25 @@
 
 	.dark {
 		color-scheme: dark;
-		--background: 240 10% 6.2%;
-		--foreground: 0 0% 98.04%;
-		--card: 240 8.57% 8%;
-		--card-foreground: 0 0% 98.04%;
-		--popover: 240 10% 6.2%;
-		--popover-foreground: 0 0% 98.04%;
-		--primary: 0 0% 98.04%;
-		--primary-foreground: 240 5.88% 10%;
-		--secondary: 240 3.7% 15.88%;
-		--secondary-foreground: 0 0% 98.04%;
-		--muted: 240 3.7% 15.88%;
-		--muted-foreground: 240 5.03% 64.9%;
-		--accent: 240 3.7% 15.88%;
-		--accent-foreground: 0 0% 98.04%;
-		--destructive: 0 59% 46%;
-		--destructive-foreground: 0 0% 98.04%;
-		--border: 240 2.86% 12%;
-		--input: 240 3.7% 15.88%;
-		--ring: 240 4.88% 86%;
+		--background: 220 8% 10%;
+		--foreground: 220 2% 97%;
+		--card: 220 10 12%;
+		--card-foreground: 220 2% 97%;
+		--popover: 220 10% 10%;
+		--popover-foreground: 220 2% 97%;
+		--primary: 220 2% 96%;
+		--primary-foreground: 220 5.88% 10%;
+		--secondary: 220 8% 16%;
+		--secondary-foreground: 220 0% 98%;
+		--muted: 220 14% 17%;
+		--muted-foreground: 220 5% 68%;
+		--accent: 220 8% 17%;
+		--accent-foreground: 220 0% 98%;
+		--destructive: 0 62% 48%;
+		--destructive-foreground: 0 0% 97%;
+		--border: 220 2% 17%;
+		--input: 220 6% 22%;
+		--ring: 220 4.88% 86%;
 		--radius: 0.8rem;
 	}
 }
