--- a/beszel/site/src/index.css
+++ b/beszel/site/src/index.css
@@ -34,25 +34,25 @@
 
 	.dark {
 		color-scheme: dark;
-		--background: 220 8% 9.2%;
+		--background: 220 5.5% 9.5%;
 		--foreground: 220 2% 97%;
-		--card: 220 10 11.2%;
+		--card: 220 5.5% 11%;
 		--card-foreground: 220 2% 97%;
-		--popover: 220 8% 9.5%;
+		--popover: 220 5.5% 9.5%;
 		--popover-foreground: 220 2% 97%;
 		--primary: 220 2% 96%;
-		--primary-foreground: 220 5.88% 10%;
-		--secondary: 220 8% 16%;
+		--primary-foreground: 220 4% 10%;
+		--secondary: 220 4% 16%;
 		--secondary-foreground: 220 0% 98%;
-		--muted: 220 14% 16%;
-		--muted-foreground: 220 5% 67%;
-		--accent: 220 8% 15.5%;
-		--accent-foreground: 220 0% 98%;
+		--muted: 220 6% 16%;
+		--muted-foreground: 220 4% 67%;
+		--accent: 220 5% 15.5%;
+		--accent-foreground: 220 2% 98%;
 		--destructive: 0 62% 46%;
 		--destructive-foreground: 0 0% 97%;
-		--border: 220 4% 16%;
-		--input: 220 6% 22%;
-		--ring: 220 5% 80%;
+		--border: 220 3% 16%;
+		--input: 220 4% 22%;
+		--ring: 220 4% 80%;
 		--radius: 0.8rem;
 	}
 }
