--- a/beszel/site/src/index.css
+++ b/beszel/site/src/index.css
@@ -3,24 +3,6 @@
 
 @config '../tailwind.config.js';
 
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-	*,
-	::after,
-	::before,
-	::backdrop,
-	::file-selector-button {
-		border-color: var(--color-gray-200, currentcolor);
-	}
-}
-
 @utility link {
 	@apply text-primary font-medium underline-offset-4 hover:underline;
 }
@@ -30,24 +12,6 @@
 	min-width: 30.3rem;
 	:where(:lang(zh), :lang(zh-CN), :lang(ko)) & {
 		min-width: 27.9rem;
-	}
-}
-
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-	*,
-	::after,
-	::before,
-	::backdrop,
-	::file-selector-button {
-		border-color: var(--color-gray-200, currentcolor);
 	}
 }
 
@@ -129,6 +93,9 @@
 	}
 	body {
 		@apply bg-background text-foreground;
+	}
+	button {
+		cursor: pointer;
 	}
 }
 
