--- a/beszel/site/src/index.css
+++ b/beszel/site/src/index.css
@@ -21,7 +21,7 @@
 	--accent: hsl(20 23.08% 94%);
 	--accent-foreground: hsl(240 5.88% 10%);
 	--destructive: hsl(0 66% 53%);
-	--destructive-foreground: hsl(0 0% 98.04%);
+	--destructive-foreground: hsl(0 0% 97%);
 	--border: hsl(30 8.11% 85.49%);
 	--input: hsl(30 4.29% 72.55%);
 	--ring: hsl(30 3.97% 49.41%);
@@ -51,7 +51,6 @@
 	--accent: hsl(220 5% 15.5%);
 	--accent-foreground: hsl(220 2% 98%);
 	--destructive: hsl(0 62% 46%);
-	--destructive-foreground: hsl(0 0% 97%);
 	--border: hsl(220 3% 16%);
 	--input: hsl(220 4% 22%);
 	--ring: hsl(220 4% 80%);
@@ -98,6 +97,7 @@
 	--color-accent: var(--accent);
 	--color-accent-foreground: var(--accent-foreground);
 	--color-destructive: var(--destructive);
+	--color-destructive-foreground: var(--destructive-foreground);
 	--color-border: var(--border);
 	--color-input: var(--input);
 	--color-ring: var(--ring);
